--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_USER_API="https://splendid-suit-colt.cyclic.app/api/user"
+NEXT_PUBLIC_USER_API="https://splendid-suit-colt.cyclic.app/api/user"
