--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "jotai": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
