--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,7 @@
     "bootswatch": "^5.3.2",
     "jotai": "^2.5.1",
     "jwt-decode": "^4.0.0",
-    "next": "13.5.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
